--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@ url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,30
 
 
 .App {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(47,121,9,1) 0%, rgba(0,212,255,1) 100%);
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
+  background: radial-gradient(ellipse  at 15%  70%, rgb(60,220,173) 0%, transparent 35%, rgba(113,234,228,0.6) 75%, rgba(85,237,223,0.45) 100%) 70% 20%/180% 120%,
+  radial-gradient(ellipse  at 60%  75%, rgb(84,225,203) 0%, rgb(39,198,229) 10%, rgb(29,214,185) 50%, rgb(28,209,149) 70%, rgb(82,180,228) 100%) 20% 30%/180% 180%;
+  height: 100vh;
+  color: #002765 !important;
+}
+
+.btn {
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 400 !important;
 }
