--- a/src/pages/Results/style.css
+++ b/src/pages/Results/style.css
@@ -1,7 +1,14 @@
 .resultWrapper {
     display: grid;
     place-items: center;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,95,179,1) 0%, rgba(0,212,255,1) 100%);
+    /* background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,95,179,1) 0%, rgba(0,212,255,1) 100%); */
     height: 100vh;
+}
+
+.resultImg {
+    max-width: 600px;
+    max-height: auto;
+    width: 100%;
+    padding: 0 10px;
 }
