add: questions data

--- a/src/components/RadioGroup/styles.css
+++ b/src/components/RadioGroup/styles.css
@@ -17,4 +17,11 @@
     margin-top: 0px !important;
     margin-bottom: 20px;
     font-family: 'Poppins', sans-serif;
+    max-width: 450px;
+    text-align: left;
+}
+
+.questionImg {
+    width: 200px;
+    height: 150px;
 }
