--- a/src/components/RadioGroup/styles.css
+++ b/src/components/RadioGroup/styles.css
@@ -18,7 +18,7 @@
     margin-bottom: 20px;
     font-family: 'Poppins', sans-serif;
     max-width: 450px;
-    text-align: left;
+    text-align: center;
 }
 
 .questionImg {
